zz-out/pass14_run2/zz-scripts/chapter06/plot_fig04_delta_rs_vs_params.err
  File "/home/jplal/MCGT/zz-scripts/chapter06/plot_fig04_delta_rs_vs_params.py", line 91
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
